--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Smoking as a Risk Factor</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
+<body>
+    <h1>Smoking as a Risk Factor</h1>
+  
+</body>
 </html>
