--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Smoking as a Risk Factor</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <h1>Smoking as a Risk Factor</h1>
-  
+    <p>This is my GitHub Pages website. It works!</p>
 </body>
 </html>
+
