--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Smoking as a Risk Factor</h1>
     <p>This is my GitHub Pages website. It works!</p>
+    <p>Adding another line</p>
 </body>
 </html>
 
