--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <title>Smoking as a Risk Factor</title>
 </head>
 <body>
+    <header style="background-color: silver">
+        <h1>Title needs to go in the center</h1>
+        <a href="">Link to smoking circle</a> <!-- anchor tag, works as a hyperlink -->
+        <a href="">Link to histograms</a>
+        <hr> <!-- horizontal rule to separate content -->
+    </header>
+
+    <main>
     <h1>Smoking as a Risk Factor</h1>
     <p>This is my GitHub Pages website. It works!</p>
     <p>Adding another line</p>
+    </main>
+
+    <footer style="background-color: silver">
+        <!-- comment: we need to add the UM logo -->
+        <a href="">Link to About Us</a>
+        <small>
+            <p>created: 31/10/2025</p>
+            <p>last updated: 07/11/2025</p>
+        </small>
+    </footer>
 </body>
 </html>
 
