--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <title>Smoking as a Risk Factor</title>
 </head>
 <body>
-    <header style="background-color: silver">
-        <h1>Title needs to go in the center</h1>
-        <a href="">Link to smoking circle</a> <!-- anchor tag, works as a hyperlink -->
-        <a href="">Link to histograms</a>
-        <hr> <!-- horizontal rule to separate content -->
-    </header>
-
-    <main>
-    <h1>Smoking as a Risk Factor</h1>
-    <p>This is my GitHub Pages website. It works!</p>
-    <p>Adding another line</p>
-    </main>
-
+    <div class="allButFooter"> <!-- Page content goes between div files -->
+        <header style="background-color: silver">
+            <h1>Title needs to go in the center</h1>
+            <a href="">Link to smoking circle</a> <!-- anchor tag, works as a hyperlink -->
+            <a href="">Link to histograms</a>
+            <hr> <!-- horizontal rule to separate content -->
+        </header>
+    
+        <main>
+        <h1>Smoking as a Risk Factor</h1>
+        <p>This is my GitHub Pages website. It works!</p>
+        <p>Adding another line</p>
+        </main>
+    </div>
     <footer style="background-color: silver">
         <!-- comment: we need to add the UM logo -->
         <a href="">Link to About Us</a>
