--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Smoking as a Risk Factor</title>
+    <style>
+        .footer {
+          position: fixed;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          background-color: silver;
+          color: black;
+          text-align: center;
+        }
+    </style>
+
+<div class="footer">
+  <p>Footer</p>
+</div>
 </head>
 <body>
-    <div class="allButFooter"> <!-- Page content goes between div files -->
+    <div> <!-- Page content goes between div files -->
         <header style="background-color: silver">
             <h1>Title needs to go in the center</h1>
             <a href="">Link to smoking circle</a> <!-- anchor tag, works as a hyperlink -->
@@ -19,14 +34,14 @@
         <p>Adding another line</p>
         </main>
     </div>
-    <footer style="background-color: silver">
+    <div class="footer">
         <!-- comment: we need to add the UM logo -->
         <a href="">Link to About Us</a>
         <small>
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
         </small>
-    </footer>
+    </div>
 </body>
 </html>
 
