--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         .body {
           position: fixed;
           left: 0;
-          top: 150px;
+          top: 130px;
           width: 100%;
           background-color: white;
           color: black;
@@ -31,12 +31,14 @@
         }
         .right {
           text-align: right;
+          right: 20px
         }
         .center {
           text-align: center;
         }
         .left {
           text-align: left;
+          left: 20px
         }
     </style>
 </head>
@@ -45,8 +47,8 @@
     <!-- Page content goes between div files -->
     <div class="header">
         <h1 class="center">Smoking</h1>
-        <a href="" class="right">Link to smoking circle</a> <!-- anchor tag, works as a hyperlink -->
-        <a href="" class="left">Link to histograms</a>
+        <div class="right"><a href="">Link to smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
+        <div class="left"><a href="">Link to histograms</a></div>
     </div>
 
     <div class="body">
@@ -57,7 +59,7 @@
         
     <div class="footer">
         <!-- comment: we need to add the UM logo -->
-        <a href="" class="center">Link to About Us</a>
+        <div class="center"><a href="">Link to About Us</a></div>
         <small class="right">
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
