--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Smoking as a Risk Factor</title>
-    <-- start writing in CSS -->
+    <-- start writing in CSS within the style tags -->
     <style> 
         .header {
           position: fixed;
@@ -16,7 +16,7 @@
         .body {
           position: fixed;
           left: 0;
-          top: 130px;
+          top: 25%;
           width: 100%;
           background-color: white;
           color: black;
@@ -31,14 +31,14 @@
         }
         .right {
           text-align: right;
-          right: 20px
+          left: 75%
         }
         .center {
           text-align: center;
         }
         .left {
           text-align: left;
-          left: 20px
+          right: 25%
         }
     </style>
 </head>
@@ -67,3 +67,4 @@
     </div>
 </body>
 </html>
+
