--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
           width: 100%;
           background-color: silver;
           color: black;
+          line-height: 5%;
         }
         .body {
           position: fixed;
           left: 0;
-          top: 25%;
+          top: 10%;
           width: 100%;
           background-color: white;
           color: black;
@@ -28,6 +29,7 @@
           width: 100%;
           background-color: silver;
           color: black;
+          line-height: 95%
         }
         .right {
           text-align: right;
@@ -67,4 +69,5 @@
     </div>
 </body>
 </html>
+
 
