--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           left: 0;
           top: 0;
           width: 100%;
+          height: 15%
           background-color: silver;
           color: black;
           line-height: 5%;
@@ -17,7 +18,7 @@
         .body {
           position: fixed;
           left: 0;
-          top: 15%;
+          top: 10%;
           width: 100%;
           background-color: white;
           color: black;
@@ -27,20 +28,21 @@
           left: 0;
           bottom: 0;
           width: 100%;
+          height: 15%
           background-color: silver;
           color: black;
           line-height: 95%
         }
         .right {
           text-align: right;
-          left: 70%
+          left: 50px
         }
         .center {
           text-align: center;
         }
         .left {
           text-align: left;
-          right: 30%
+          right: 50px
         }
     </style>
 </head>
@@ -69,6 +71,7 @@
     </div>
 </body>
 </html>
+
 
 
 
