--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+
+<!-- Load d3.js -->
+<script src="https://d3js.org/d3.v4.js"></script>
+
+<!-- Create a div where the graph will take place -->
+<div id="my_dataviz"></div>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Smoking as a Risk Factor</title>
     <-- start writing in CSS within the style tags -->
     <style> 
@@ -10,7 +16,7 @@
           left: 0;
           top: 0;
           width: 100%;
-          height: 15%
+          height: 100%
           background-color: silver;
           color: black;
           line-height: 5%;
@@ -28,7 +34,7 @@
           left: 0;
           bottom: 0;
           width: 100%;
-          height: 15%
+          height: 100%
           background-color: silver;
           color: black;
           line-height: 95%
@@ -71,6 +77,7 @@
     </div>
 </body>
 </html>
+
 
 
 
