--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           left: 0;
           top: 0;
           width: 100%;
-          height: 100%
+          height: 10%;
           background-color: silver;
           color: black;
           line-height: 5%;
@@ -34,7 +34,7 @@
           left: 0;
           bottom: 0;
           width: 100%;
-          height: 100%
+          height: 10%;
           background-color: silver;
           color: black;
           line-height: 95%
@@ -77,6 +77,7 @@
     </div>
 </body>
 </html>
+
 
 
 
