--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           left: 0;
           top: 0;
           width: 100%;
-          height: 10%;
+          height: 15%;
           background-color: silver;
           color: black;
           line-height: 5%;
@@ -24,7 +24,7 @@
         .body {
           position: fixed;
           left: 0;
-          top: 10%;
+          top: 15%;
           width: 100%;
           background-color: white;
           color: black;
@@ -34,21 +34,21 @@
           left: 0;
           bottom: 0;
           width: 100%;
-          height: 10%;
+          height: 15%;
           background-color: silver;
           color: black;
-          line-height: 95%
+          line-height: 95%;
         }
         .right {
           text-align: right;
-          left: 50px
+          left: 50px;
         }
         .center {
           text-align: center;
         }
         .left {
           text-align: left;
-          right: 50px
+          right: 50px;
         }
     </style>
 </head>
@@ -77,6 +77,7 @@
     </div>
 </body>
 </html>
+
 
 
 
