--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         }
         .right {
           text-align: right;
-          left: 50px;
+          left: 75%;
         }
         .center {
           text-align: center;
         }
         .left {
           text-align: left;
-          right: 50px;
+          right: 25%;
         }
     </style>
 </head>
@@ -77,6 +77,7 @@
     </div>
 </body>
 </html>
+
 
 
 
