--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           width: 100%;
           background-color: white;
           color: black;
+          margin: 5%;
         }
         .footer {
           position: fixed;
@@ -41,14 +42,14 @@
         }
         .right {
           text-align: right;
-          left: 75%;
+          margin-right: 25%;
         }
         .center {
           text-align: center;
         }
         .left {
           text-align: left;
-          right: 25%;
+          margin-left: 25%;
         }
     </style>
 </head>
@@ -77,6 +78,7 @@
     </div>
 </body>
 </html>
+
 
 
 
