--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           background-color: silver;
           color: black;
           line-height: 5%;
+          text-align: center;
         }
         .body {
           position: fixed;
@@ -39,17 +40,19 @@
           background-color: silver;
           color: black;
           line-height: 95%;
-        }
-        .right {
-          text-align: right;
-          margin-right: 25%;
-        }
-        .center {
           text-align: center;
         }
-        .left {
+        .navigation_histograms {
+          text-align: right;
+          margin-right: 20%;
+        }
+        .footer_date {
+          text-align: right;
+          margin-right: 20%;
+        }
+        .navigation_burst {
           text-align: left;
-          margin-left: 25%;
+          margin-left: 20%;
         }
     </style>
 </head>
@@ -57,9 +60,9 @@
 <body>
     <!-- Page content goes between div files -->
     <div class="header">
-        <h1 class="center">Smoking</h1>
-        <div class="right"><a href="">Link to smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
-        <div class="left"><a href="">Link to histograms</a></div>
+        <h1>Smoking</h1>
+        <div class="navigation_burst"><a href="">Link to smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
+        <div class="navigation_histograms"><a href="">Link to histograms</a></div>
     </div>
 
     <div class="body">
@@ -70,14 +73,15 @@
         
     <div class="footer">
         <!-- comment: we need to add the UM logo -->
-        <div class="center"><a href="">Link to About Us</a></div>
-        <small class="right">
+        <div><a href="">Link to About Us</a></div>
+        <small class="footer_date">
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
 </body>
 </html>
+
 
 
 
