--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         <h1>Smoking as a Risk Factor</h1>
         <p>This is my GitHub Pages website. It works!</p>
         <p>Adding another line</p>
+
+        <!-- Container for JS to insert data -->
+        <div id = "output"></div>
     </div>
         
     <div class="footer">
@@ -79,8 +82,11 @@
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
+    <!-- Load external JS script -->
+    <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
