--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
         
     <div class="footer">
-        <!-- comment: we need to add the UM logo -->
+        <img src="pic_trulli.jpg" alt="Italian Trulli">
         <div><a href="">Link to About Us</a></div>
         <small class="footer_date">
             <p>created: 31/10/2025</p>
@@ -88,6 +88,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
