--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
         
     <div class="footer">
-        <img src="um_logo.png" alt="Logo of Maastricht University">
+        <img src="um_logo.png" alt="Logo of Maastricht University" width=50px height=50px>
         <div><a href="">Link to About Us</a></div>
         <small class="footer_date">
             <p>created: 31/10/2025</p>
@@ -88,6 +88,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
