--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
           left: 0;
           width: 100%;
           height: 70%;
-          background-color: white;
+          background-image: smoke.jpg;
+          background-repeat: no-repeat;
           color: black;
           padding: 2rem;
           overflow: auto;
@@ -77,7 +78,7 @@
     </div>
         
     <div class="footer">
-        <img src="um_logo.png" alt="Logo of Maastricht University" width=50px height=50px>
+        <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
         <div><a href="">Link to About Us</a></div>
         <small class="footer_date">
             <p>created: 31/10/2025</p>
@@ -88,6 +89,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
