--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="https://d3js.org/d3.v4.js"></script>
 
 <!-- Create a div where the graph will take place -->
-<div id="my_dataviz"></div>
+<!div id="my_dataviz"><!/div>
 
 <script>
 
@@ -153,6 +153,7 @@ d3.json("https://raw.githubusercontent.com/holtzy/D3-graph-gallery/master/DATA/d
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
