--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ d3.json("diseases_risk_factors.json", function( data) {
           left: 0;
           width: 100%;
           height: 70%;
-          background-image: url(smoke.jpg);
-          background-repeat: no-repeat;
+          /*background-image: url(smoke.jpg);
+          background-repeat: no-repeat; */
           color: black;
           padding: 2rem;
           overflow: auto;
@@ -150,6 +150,7 @@ d3.json("diseases_risk_factors.json", function( data) {
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
