--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ d3.json("diseases_risk_factors.json", function( data) {
         
         .footer {
           bottom: 0;
-          padding: 0 5%;
+          padding: 0 2%;
         }
         
         .body {
@@ -108,14 +108,9 @@ d3.json("diseases_risk_factors.json", function( data) {
         }
         .navigation_histograms {
           text-align: right;
-          margin-right: 15%;
-        }
-        .footer_date {
-          text-align: right;
         }
         .navigation_burst {
           text-align: left;
-          margin-left: 15%;
         }
     </style>
 </head>
@@ -140,7 +135,7 @@ d3.json("diseases_risk_factors.json", function( data) {
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
         <div><a href="">Link to About Us</a></div>
-        <small class="footer_date">
+        <small>
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
         </small>
@@ -149,6 +144,7 @@ d3.json("diseases_risk_factors.json", function( data) {
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
