--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ d3.json("diseases_risk_factors.json", function( data) {
         
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
-        <div><a href="">Link to About Us</a></div>
+        <div class="title"><a href="">Link to About Us</a></div>
         <small class="footer_date">
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
@@ -146,6 +146,7 @@ d3.json("diseases_risk_factors.json", function( data) {
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
