--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <!-- Load d3.js -->
 <script src="https://d3js.org/d3.v4.js"></script>
 
-
-</script>
 <html lang="en">
 <head>
     <title>Smoking as a Risk Factor</title>
@@ -16,8 +14,8 @@
           left: 0;
           width: 100%;
           height: 15%;
-          background-color: silver;
-          color: black;
+          background-color: ppink;
+          color: blue;
           display: flex;
           align-items: center;
           justify-content: space-between; /* spreads left, center, right */
@@ -86,6 +84,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
