--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           left: 0;
           width: 100%;
           height: 15%;
-          background-color: ppink;
-          color: blue;
+          background-color: pink;
+          color: black;
           display: flex;
           align-items: center;
           justify-content: space-between; /* spreads left, center, right */
@@ -84,6 +84,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
