--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <html lang="en">
 <head>
     <title>Smoking as a Risk Factor</title>
-    <-- start writing in CSS within the style tags -->
+    <!-- start writing in CSS within the style tags -->
     <style> 
         .header, .footer {
           position: fixed;
           left: 0;
           width: 100%;
           height: 15%;
-          background-color: pink;
+          background-color: LightPink;
           color: black;
           display: flex;
           align-items: center;
@@ -84,6 +84,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
