--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         <h1>Smoking as a Risk Factor</h1>
         <p>This is my GitHub Pages website. It works!</p>
         <p>Adding another line</p>
+        <div id = "output"></div>
+    </div>
 
         <!-- Create a div where the graph will take place -->
     <div id="#my_dataviz"></div>
@@ -84,6 +86,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
