--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <!-- Page content goes between div files -->
     <div class="header">
-        <div><a href="">Link to smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
+        <div><a href="Circles.html">Link to smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
         <h1 class="title">Smoking</h1>
         <div><a href="">Link to histograms</a></div>
     </div>
@@ -69,7 +69,8 @@
         <p>Adding another line</p>
         <div id = "output"></div>
     </div>
-
+    <div id = "graph"></div>
+    
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
         <div class="title"><a href="AboutUs.html">Link to About Us</a></div>
@@ -79,9 +80,11 @@
         </small>
     </div>
     <!-- Load external JS script -->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
