--- a/Histograms.html
+++ b/Histograms.html
@@ -9,7 +9,7 @@
           left: 0;
           width: 100%;
           height: 15%;
-          background-color: silver;
+          background-color: Lavender;
           color: black;
           display: flex;
           align-items: center;
@@ -65,7 +65,7 @@
         
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
-        <div class="title"><a href="Histograms.html">Histograms</a></div>
+        <div class="title"><a href="about.html">About Us</a></div>
         <small class="footer_date">
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
