--- a/Circles.html
+++ b/Circles.html
@@ -9,7 +9,7 @@
           left: 0;
           width: 100%;
           height: 15%;
-          background-color: LightPurple;
+          background-color: Lavender;
           color: black;
           display: flex;
           align-items: center;
