--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <body>
     <!-- Page content goes between div files -->
     <div class="header">
-        <div><a href="Circles.html">Link to smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
+        <div><a href="Circles.html">Smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
         <h1 class="title">Smoking</h1>
-        <div><a href="">Link to histograms</a></div>
+        <div><a href="Histograms">Histograms</a></div>
     </div>
 
     <div class="body">
@@ -84,6 +84,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
