--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           left: 0;
           width: 100%;
           height: 15%;
-          background-color: LightPink;
+          background-color: LavenderBlush;
           color: black;
           display: flex;
           align-items: center;
@@ -60,7 +60,7 @@
     <div class="header">
         <div><a href="Circles.html">Smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
         <h1 class="title">Smoking</h1>
-        <div><a href="Histograms">Histograms</a></div>
+        <div><a href="Histograms.html">Histograms</a></div>
     </div>
 
     <div class="body">
@@ -84,6 +84,7 @@
     <script src = "script.js"></script>
 </body>
 </html>
+
 
 
 
