--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div id = "output"></div>
     </div>
     <div id = "graph"></div>
+    <div id="my_dataviz"></div>
     
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
@@ -82,8 +83,10 @@
     <!-- Load external JS script -->
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src = "script.js"></script>
+    <script src = "network.js"></script>
 </body>
 </html>
+
 
 
 
