--- a/Circles.html
+++ b/Circles.html
@@ -53,7 +53,7 @@
 <body>
     <div class="header">
         <div><a href="index.html">Homepage</a></div>
-        <h1 class="title">SMOKING CIRCLES</h1>
+        <h1 class="title">Smoking circles</h1>
         <div></div>
     </div>
     
