--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 
 <!-- Load d3.js -->
-<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://d3js.org/d3.v6.min.js"></script>
 
 <html lang="en">
 <head>
@@ -83,6 +83,7 @@
     <script src = "network.js"></script>
 </body>
 </html>
+
 
 
 
