--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
         <p>Adding another line</p>
     </div>
     <div id="my_dataviz"></div>
-    
+    <div id="graph" style="width: 100%; height: 600px;"></div>
+
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
         <div class="title"><a href="AboutUs.html">Link to About Us</a></div>
@@ -78,10 +79,13 @@
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
+    
     <!-- Load external JS script -->
+     <script src = "script.js"></script>
     <script src = "network.js"></script>
 </body>
 </html>
+
 
 
 
