--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
         <p>This is my GitHub Pages website. It works!</p>
         <p>Adding another line</p>
     </div>
-    <div id="my_dataviz"></div>
     <div id="graph" style="width: 100%; height: 600px;"></div>
 
     <div class="footer">
@@ -79,10 +78,11 @@
     </div>
     
     <!-- Load external JS script -->
-    <!--script src = "script.js" -->
-    <script src = "network.js"></script>
+    <script src = "script.js"></script>
+    
 </body>
 </html>
+
 
 
 
