--- a/Circles.html
+++ b/Circles.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Load d3.js -->
+<script src="https://d3js.org/d3.v6.min.js"></script>
 <html lang="en">
 <head>
     <meta charset="utf-8">
