--- a/Circles.html
+++ b/Circles.html
@@ -64,6 +64,9 @@
         <p>Here we put the graphs.</p>
         <p>Here we explain how the graphs work.</p>
     </div>
+
+    <!-- Load external JS script -->
+    <script src = "network.js"></script>
         
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
