--- a/Circles.html
+++ b/Circles.html
@@ -66,7 +66,9 @@
     </div>
 
     <!-- Load external JS script -->
-    <script src = "network.js"></script>
+    <script src = "network.js">
+        <div id="my_dataviz"></div>
+    </script>
         
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
