--- a/Circles.html
+++ b/Circles.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- Load d3.js -->
-<script src="https://d3js.org/d3.v6.min.js"></script>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -65,10 +63,7 @@
         <p>Here we explain how the graphs work.</p>
     </div>
 
-    <!-- Load external JS script -->
-    <script src = "network.js">
-        <div id="my_dataviz"></div>
-    </script>
+    <div id="my_dataviz"></div>
         
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
@@ -78,5 +73,9 @@
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
+    <!-- Load d3.js -->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
+    <!-- Load external JS script -->
+    <script src = "network.js"></script>
 </body>
 </html>
