--- a/Circles.html
+++ b/Circles.html
@@ -63,7 +63,7 @@
         <p>Here we explain how the graphs work.</p>
     </div>
 
-    <div id="my_dataviz"></div>
+    <div id="circle"></div>
         
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
