--- a/Circles.html
+++ b/Circles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Smoking circles</title>
-    <style>
+    <style src="design.css">
         .header, .footer {
           position: fixed;
           left: 0;
@@ -63,8 +63,9 @@
         <p>Here we explain how the graphs work.</p>
     </div>
 
-    <div id="circle"></div>
-        
+    <div id="circle" class="circle"></div>
+    <div id="tooltip" class="tooltip"></div>
+    
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
         <div class="title"><a href="AboutUs.html">About Us</a></div>
