Update and rename Histograms.html to BarChart.html

--- a/BarChart.html
+++ b/BarChart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Histograms</title>
+    <title>Bar Charts</title>
     <style>
         .header, .footer {
           position: fixed;
@@ -53,12 +53,12 @@
 <body>
     <div class="header">
         <div><a href="index.html">Homepage</a></div>
-        <h1 class="title">Histograms</h1>
+        <h1 class="title">Bar Chart</h1>
         <div></div>
     </div>
     
     <div class="body">
-        <h1>Smoking histograms</h1>
+        <h1>Bar charts displaying relationships between risk fcators and number of diseases it leads to and number of diseases with a specific symptom</h1>
         <p>Here we put the graphs.</p>
         <p>Here we explain the graphs.</p>
     </div>
