--- a/BarChart.html
+++ b/BarChart.html
@@ -61,7 +61,7 @@
     
     <div class="body">
         <h1>Bar charts displaying relationships between risk fcators and number of diseases it leads to and number of diseases with a specific symptom</h1>
-        <div class="graph"><a href="BarChart.js">graph</a></div>
+        <script src="BarGraph.js"><script>
         <p>Here we explain the graphs.</p>
     </div>
         
