--- a/BarChart.html
+++ b/BarChart.html
@@ -61,7 +61,7 @@
     
     <div class="body">
         <h1>Bar charts displaying relationships between risk fcators and number of diseases it leads to and number of diseases with a specific symptom</h1>
-        <script src="BarChart.js"><script>
+        <script src="BarChart.js"></script>
         <p>Here we explain the graphs.</p>
     </div>
         
