--- a/BarChart.html
+++ b/BarChart.html
@@ -61,7 +61,6 @@
     
     <div class="body">
         <h1>Bar charts displaying relationships between risk fcators and number of diseases it leads to and number of diseases with a specific symptom</h1>
-        <script src="BarChart.js"></script>
         <p>Here we explain the graphs.</p>
     </div>
         
@@ -73,5 +72,6 @@
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
+    <script src="chart.js"></script>
 </body>
 </html>
