--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="header">
         <div><a href="Circles.html">Smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
         <h1 class="title">Smoking</h1>
-        <div><a href="BarGraphAllIn.html">Bar Charts</a></div>
+        <div><a href="BarChart.html">Bar Charts</a></div>
     </div>
 
     <div class="body">
@@ -82,6 +82,7 @@
     
 </body>
 </html>
+
 
 
 
