take out js to check

--- a/BarChart.html
+++ b/BarChart.html
@@ -72,6 +72,6 @@
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
-    <script src="chart.js"></script>
+    <!script src="chart.js"></!script>
 </body>
 </html>
