--- a/BarChart.html
+++ b/BarChart.html
@@ -72,6 +72,6 @@
             <p>last updated: 07/11/2025</p>
         </small>
     </div>
-    <!script src="chart.js"></!script>
+    <script src="BarChart.js"></script>
 </body>
 </html>
