--- a/AboutUs.html
+++ b/AboutUs.html
@@ -52,7 +52,7 @@
     
 <body>
     <div class="header">
-        <div><a href="index.html">Back to Home</a></div>
+        <div><a href="index.html">Homepage</a></div>
         <h1 class="title">About Us</h1>
         <div></div>
     </div>
