--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
-        <div class="title"><a href="AboutUs.html">bout Us</a></div>
+        <div class="title"><a href="AboutUs.html">About Us</a></div>
         <small class="footer_date">
             <p>created: 31/10/2025</p>
             <p>last updated: 07/11/2025</p>
@@ -82,6 +82,7 @@
     
 </body>
 </html>
+
 
 
 
