--- a/BarGraphAllIn.html
+++ b/BarGraphAllIn.html
@@ -83,7 +83,7 @@
 </head>
 <body>
     <div class="header">
-        <div></div>
+        <div><a href="index.html">Homepage</a></div>
         <h1 class="title">Diseases per Risk Factor</h1>
         <div></div>
     </div>
@@ -94,8 +94,12 @@
     </div>
     
     <div class="footer">
-        <div>Risk Factor Analysis</div>
-        <div class="footer_date">Data from Wikidata</div>
+        <img src="um_logo.png" alt="Logo of Maastricht University" width="44.92" height="50.28">
+        <div class="title"><a href="AboutUs.html">About Us</a></div>
+        <small class="footer_date">
+            <p>created: 31/10/2025</p>
+            <p>last updated: 07/11/2025</p>
+        </small>
     </div>
 
     <script>
