add second bar graph

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <div class="header">
         <div><a href="Circles.html">Smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
         <h1 class="title">Smoking</h1>
-        <div><a href="BarGraphAllIn.html">Bar Charts</a></div>
+        <div><a href="BarGraphAllIn.html">Bar Chart 1</a></div>
+        <div><a href="Bar2.html">Bar Chart2 </a></div>
     </div>
 
     <div class="body">
@@ -82,6 +83,7 @@
     
 </body>
 </html>
+
 
 
 
