--- a/Bar2.html
+++ b/Bar2.html
@@ -84,7 +84,7 @@
 <body>
     <div class="header">
         <div><a href="index.html">Homepage</a></div>
-        <h1 class="title">Sympotoms per disease</h1>
+        <h1 class="title">Symptoms per Disease</h1>
         <div></div>
     </div>
     
@@ -133,8 +133,8 @@
                 return json.results.bindings.map((row) => ({
                     disease: row.disease.value,
                     diseaseLabel: row.diseaseLabel.value,
-                    symptoms: row.symtpoms.value,
-                    symtpomsLabel: row.symptomsLabel.value,
+                    symptoms: row.symptoms.value,
+                    symptomsLabel: row.symptomsLabel.value,
                 }));
             } catch (error) {
                 console.error("Error fetching data:", error);
@@ -146,11 +146,11 @@
 
         // Function to prepare data for bar chart
         function prepareChartData(data) {
-            // Group by risk factor and count unique diseases
+            // Group by disease and count unique symptoms
             const groupedByDisease = d3.group(data, (d) => d.diseaseLabel);
             
             return Array.from(groupedByDisease, ([disease, values]) => {
-                // Count unique diseases for this risk factor
+                // Count unique symptoms for this disease
                 const uniqueSymptoms = new Set(values.map(v => v.symptoms));
                 return {
                     disease: disease,
@@ -185,7 +185,7 @@
                 .range([height, 0])
                 .domain([0, d3.max(chartData, d => d.count)]);
 
-            // Add bars (changed to pink)
+            // Add bars
             svg.selectAll(".bar")
                 .data(chartData)
                 .join("rect")
@@ -196,9 +196,9 @@
                 .attr("height", d => height - y(d.count))
                 .attr("fill", "#FF69B4")
                 .append("title")
-                .text(d => `${d.disease}: ${d.count} diseases`);
+                .text(d => `${d.disease}: ${d.count} symptoms`);
 
-            // Add X axis (changed to black)
+            // Add X axis
             svg.append("g")
                 .attr("transform", `translate(0,${height})`)
                 .call(d3.axisBottom(x))
@@ -207,13 +207,13 @@
                 .style("text-anchor", "end")
                 .style("fill", "#000000");
 
-            // Add Y axis (changed to black)
+            // Add Y axis
             svg.append("g")
                 .call(d3.axisLeft(y).ticks(10))
                 .selectAll("text")
                 .style("fill", "#000000");
 
-            // Add Y axis label (changed to black)
+            // Add Y axis label
             svg.append("text")
                 .attr("transform", "rotate(-90)")
                 .attr("y", 0 - margin.left)
@@ -223,14 +223,14 @@
                 .style("fill", "#000000")
                 .text("Amount of Symptoms");
 
-            // Add X axis label (changed to black)
+            // Add X axis label
             svg.append("text")
                 .attr("transform", `translate(${width / 2}, ${height + margin.bottom - 10})`)
                 .style("text-anchor", "middle")
                 .style("fill", "#000000")
                 .text("Diseases");
 
-            // Style axis lines (changed to black)
+            // Style axis lines
             svg.selectAll(".domain, .tick line")
                 .style("stroke", "#000000");
         }
