--- a/Bar2.html
+++ b/Bar2.html
@@ -78,6 +78,8 @@
 <body>
     <div class="header">
         <div><a href="index.html">Homepage</a></div>
+        <p>For each disease linked to smoking, all the symptoms of that disease were extracted. Each symptom is linked to multiple disease. The following bar chart displays this relationship, 
+            showing how many symptoms related to smoking each disease has.</p>
         <h1 class="title">Symptoms per Disease</h1>
         <div></div>
     </div>
