--- a/Circles.html
+++ b/Circles.html
@@ -47,6 +47,19 @@
         .footer_date {
           text-align: right;
         }
+
+        .tooltip {
+          position: absolute;
+          text-align: center;
+          padding: 6px 10px;
+          font-size: 14px;
+          background: rgba(0,0,0,0.7);
+          color: #fff;
+          border-radius: 4px;
+          pointer-events: none; /* important so it doesn’t block mouse */
+          opacity: 0;
+          transition: opacity 0.2s;
+        }
     </style>
 </head>
     
