--- a/Circles.html
+++ b/Circles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Smoking circles</title>
-    <style src="design.css">
+    <style>
         .header, .footer {
           position: fixed;
           left: 0;
