--- a/piecharts.html
+++ b/piecharts.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Pie charts</title>
+    <link rel="stylesheet" href="design.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+</head>
+
+<body>
+    <div class="header">
+        <div>
+            <a href="index.html">Homepage</a> |
+            <a href="BarChart.html">Bar chart</a> |
+            <a href="piecharts.html">Pie charts</a>
+        </div>
+        <h1 class="title">Pie Charts</h1>
+    </div>
+
+    <div class="body">
+        <h1>Symptoms pie chart</h1>
+        <p>Each slice shows how many diseases share a given symptom.</p>
+
+        <div id="chart-container"></div>
+    </div>
+
+    <div class="footer">
+        <!-- whatever you already have -->
+    </div>
+
+    <script src="PieChart.js"></script>
+</body>
+</html>
 
