--- a/index.html
+++ b/index.html
@@ -79,66 +79,9 @@
     </div>
     
     <!-- Load external JS script -->
-    <script scr = "expand.js"></script>
+    <script src="expand.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
