--- a/Circles.html
+++ b/Circles.html
@@ -71,6 +71,7 @@
     </div>
     
     <div class="body">
+        <div id="loading-message">Loading data...</div>
         <h1>Smoking circles</h1>
         <p>Here we put the graphs.</p>
         <p>Here we explain how the graphs work.</p>
