--- a/diseases_bubbles.html
+++ b/diseases_bubbles.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Disease bubble chart</title>
+    <title>Diseases bubble chart</title>
 
     <!-- Use your main CSS file -->
     <link rel="stylesheet" href="stylefinal.css">
@@ -20,9 +20,9 @@
             <a href="Bar2.html">Bar2</a> |
             <a href="Circles.html">Smoking circle</a> |
             <!-- NEW LINK IS THIS PAGE -->
-            <a href="disease_bubbles.html">Disease bubbles</a>
+            <a href="diseases_bubbles.html">Diseases bubbles</a>
         </div>
-        <h1 class="title">Disease Bubble Chart</h1>
+        <h1 class="title">Diseases Bubble Chart</h1>
     </div>
 
     <div class="body">
@@ -46,7 +46,7 @@
     </div>
 
     <!-- Bubble chart code -->
-    <script src="disease_bubbles.js?v=1"></script>
+    <script src="diseases_bubbles.js?v=1"></script>
 </body>
 </html>
 
