--- a/diseases_bubbles.html
+++ b/diseases_bubbles.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Disease bubble chart</title>
 
-    <!-- Your CSS (pick the one you use) -->
+    <!-- use your main CSS -->
     <link rel="stylesheet" href="stylefinal.css">
     <!-- or: <link rel="stylesheet" href="design.css"> -->
 
-    <!-- D3 -->
+    <!-- D3 from CDN -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
@@ -26,10 +26,11 @@
     <div class="body">
         <h1>Number of symptoms per disease</h1>
         <p>
-            TEST VERSION: dummy data only. If you see coloured circles below,
-            the page works. Then we can plug in the real JSON.
+            Each circle represents a disease. The larger the circle,
+            the more symptoms are associated with that disease.
         </p>
 
+        <!-- D3 will draw inside this div -->
         <div id="chart-container"></div>
     </div>
 
@@ -42,91 +43,119 @@
         </small>
     </div>
 
-    <!-- INLINE SCRIPT: NO EXTERNAL JS FILES -->
+    <!-- INLINE SCRIPT: THIS IS THE ONLY JS YOU NEED -->
     <script>
-      alert("Inline bubble script IS RUNNING!");
+      // debug: if you don't see this alert, this file is not the one you are opening
+      alert("Bubble chart page is running!");
 
-      console.log(">>> starting inline bubble chart");
+      // Load your existing JSON with diseases + symptoms
+      d3.json("diseases_symptoms.json").then(rows => {
+        console.log("Loaded JSON rows:", rows.length);
 
-      // Dummy data: diseaseLabel + number of symptoms
-      const data = [
-        { diseaseLabel: "Heart disease", count: 9 },
-        { diseaseLabel: "Breast cancer", count: 7 },
-        { diseaseLabel: "Lung cancer", count: 8 },
-        { diseaseLabel: "Asthma", count: 4 },
-        { diseaseLabel: "Pneumonia", count: 5 },
-        { diseaseLabel: "Mumps", count: 8 },
-        { diseaseLabel: "Type 2 diabetes", count: 3 },
-        { diseaseLabel: "Depression", count: 3 }
-      ];
+        // Group by diseaseLabel -> unique symptomLabels
+        const diseaseToInfo = d3.rollup(
+          rows,
+          v => {
+            const symptomSet = new Set(v.map(d => d.symptomLabel));
+            return {
+              count: symptomSet.size,
+              symptoms: Array.from(symptomSet)
+            };
+          },
+          d => d.diseaseLabel
+        );
 
-      const width = 900;
-      const height = 600;
+        let data = Array.from(diseaseToInfo, ([diseaseLabel, info]) => ({
+          diseaseLabel,
+          count: info.count,
+          symptoms: info.symptoms
+        }));
 
-      const svg = d3.select("#chart-container")
-        .append("svg")
-        .attr("width", width)
-        .attr("height", height);
+        // Sort biggest first
+        data.sort((a, b) => b.count - a.count);
 
-      const root = d3.hierarchy({ children: data })
-        .sum(d => d.count);
+        const width = 900;
+        const height = 600;
 
-      const pack = d3.pack()
-        .size([width, height])
-        .padding(5);
+        const svg = d3.select("#chart-container")
+          .append("svg")
+          .attr("width", width)
+          .attr("height", height);
 
-      const nodes = pack(root).leaves();
+        // Layout bubbles
+        const root = d3.hierarchy({ children: data })
+          .sum(d => d.count);
 
-      const countExtent = d3.extent(nodes, d => d.data.count);
-      const color = d3.scaleSequential()
-        .domain(countExtent)
-        .interpolator(d3.interpolatePuRd);
+        const pack = d3.pack()
+          .size([width, height])
+          .padding(5);
 
-      const tooltip = d3.select("body")
-        .append("div")
-        .style("position", "absolute")
-        .style("pointer-events", "none")
-        .style("background", "white")
-        .style("border", "1px solid #ccc")
-        .style("border-radius", "4px")
-        .style("padding", "6px 8px")
-        .style("font-size", "12px")
-        .style("opacity", 0);
+        const nodes = pack(root).leaves();
 
-      const node = svg.selectAll("g.node")
-        .data(nodes)
-        .enter()
-        .append("g")
-          .attr("class", "node")
-          .attr("transform", d => \`translate(\${d.x},\${d.y})\`);
+        const countExtent = d3.extent(nodes, d => d.data.count);
+        const color = d3.scaleSequential()
+          .domain(countExtent)
+          .interpolator(d3.interpolatePuRd);
 
-      node.append("circle")
-        .attr("r", d => d.r)
-        .attr("fill", d => color(d.data.count))
-        .attr("stroke", "#333")
-        .attr("stroke-width", 0.5)
-        .on("mouseover", (event, d) => {
-          tooltip
-            .style("opacity", 1)
-            .html(\`<strong>\${d.data.diseaseLabel}</strong><br>\${d.data.count} symptom(s)\`);
-        })
-        .on("mousemove", (event) => {
-          tooltip
-            .style("left", (event.pageX + 10) + "px")
-            .style("top", (event.pageY + 10) + "px");
-        })
-        .on("mouseout", () => {
-          tooltip.style("opacity", 0);
-        });
+        // Tooltip
+        const tooltip = d3.select("body")
+          .append("div")
+          .style("position", "absolute")
+          .style("pointer-events", "none")
+          .style("background", "white")
+          .style("border", "1px solid #ccc")
+          .style("border-radius", "4px")
+          .style("padding", "8px 10px")
+          .style("font-size", "12px")
+          .style("max-width", "260px")
+          .style("box-shadow", "0 2px 6px rgba(0,0,0,0.2)")
+          .style("opacity", 0);
 
-      node.append("text")
-        .attr("text-anchor", "middle")
-        .attr("dy", "0.3em")
-        .attr("font-size", d => Math.min(12, d.r / 3))
-        .text(d => {
-          const label = d.data.diseaseLabel;
-          return label.length > 18 ? label.slice(0, 15) + "…" : label;
-        });
+        const node = svg.selectAll("g.node")
+          .data(nodes)
+          .enter()
+          .append("g")
+            .attr("class", "node")
+            .attr("transform", d => `translate(${d.x},${d.y})`);
+
+        // Circles
+        node.append("circle")
+          .attr("r", d => d.r)
+          .attr("fill", d => color(d.data.count))
+          .attr("stroke", "#333")
+          .attr("stroke-width", 0.5)
+          .on("mouseover", (event, d) => {
+            const html = `
+              <strong>${d.data.diseaseLabel}</strong><br/>
+              <em>${d.data.count} symptom(s)</em><br/><br/>
+              <strong>Symptoms:</strong><br/>
+              ${d.data.symptoms.join(", ")}
+            `;
+            tooltip.style("opacity", 1).html(html);
+          })
+          .on("mousemove", (event) => {
+            tooltip
+              .style("left", (event.pageX + 10) + "px")
+              .style("top", (event.pageY + 10) + "px");
+          })
+          .on("mouseout", () => {
+            tooltip.style("opacity", 0);
+          });
+
+        // Labels inside bubbles
+        node.append("text")
+          .attr("text-anchor", "middle")
+          .attr("dy", "0.3em")
+          .attr("font-size", d => Math.min(12, d.r / 3))
+          .text(d => {
+            const label = d.data.diseaseLabel;
+            return label.length > 18 ? label.slice(0, 15) + "…" : label;
+          });
+
+      }).catch(err => {
+        console.error("Error loading or parsing diseases_symptoms.json:", err);
+        alert("Error loading diseases_symptoms.json — check console");
+      });
     </script>
 </body>
 </html>
