--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
         
         .body {
-          position: fixed;
+          position: relative;
           top: 15%;
           left: 0;
           width: 100%;
@@ -70,9 +70,8 @@
 
 <div id="bubble-chart" style="width: 100%; height: 600px;"></div>
 
-    </div>
     <div id="graph" style="width: 100%; height: 600px;"></div>
-
+    </div>
     <div class="footer">
         <img src="um_logo.png" alt="Logo of Maastricht University" width=44.92px height=50.28px>
         <div class="title"><a href="AboutUs.html">About Us</a></div>
@@ -187,6 +186,7 @@ d3.json("diseases_symptoms.json").then(rows => {
     <script src="expand.js"></script>
 </body>
 </html>
+
 
 
 
