--- a/diseases_bubbles.html
+++ b/diseases_bubbles.html
@@ -36,6 +36,7 @@
           height: 70%;
           padding: 2rem;
           overflow: auto;
+          color: black;
         }
 
         .title {
@@ -166,5 +167,6 @@
 
 </body>
 </html>
+
 
 
